traducoes e persistence.xml

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,62 +1,62 @@
 #menu
-global_menu_new=Create new {0}
-global_menu_list=List all {0}
-global_menu_find=Find by {0}
-global_language_switch=Switch language to {0}
-global_language=Language
+global_menu_new=Criar novo {0}
+global_menu_list=Listar Todos os {0}
+global_menu_find=Pesquisar por {0}
+global_language_switch=Trocar a linguagem por {0}
+global_language=Linguagem
 global_sponsored=Sponsored by SpringSource
-global_theme=Theme
+global_theme=Tema
 global_theme_alt=alt
 global_theme_standard=standard
 global_generic={0}
 
 #welcome page
-welcome_titlepane=Welcome to {0}
-welcome_h3=Welcome to {0}
-welcome_text=Spring Roo provides interactive, lightweight and user customizable tooling that enables rapid delivery of high performance enterprise Java applications.
+welcome_titlepane=Bem vindo ao {0}
+welcome_h3=Bem vindo ao {0}
+welcome_text=Classifikdos é um serviço que facilitará o seu dia-a-dia na hora de comprar ou vender os seus produtos. Teste-nos!
 
 #entity labels
-entity_list_all=List all {0}
-entity_show=Show {0}
-entity_create=Create new {0}
-entity_update=Update {0}
-entity_delete=Delete {0}
-entity_delete_confirm=Are you sure want to delete this item?
-entity_find=Find {0}
-entity_not_found=No {0} found.
-entity_not_found_single=No {0} found with this id.
+entity_list_all=Listar Todos os {0}
+entity_show=Visualizar {0}
+entity_create=Criar Novo {0}
+entity_Atualizar=Atualizar {0}
+entity_delete=Apagar {0}
+entity_delete_confirm=Você tem certeza que deseja remover?
+entity_find=Pesquisar {0}
+entity_not_found=Nenhum {0} encontrado.
+entity_not_found_single=Não {0} encontrado com esse id.
 entity_dependency_required=The following dependencies need to be created first:
 entity_reference_not_managed=This relationship is managed from the {0} side.
 
 #button labels
-button_home=Home
-button_save=Save
-button_update=Update
-button_find=Find
-button_cancel=Cancel
-button_proceed=Proceed
-button_submit=Submit
-button_reset=Reset
-button_end=End
-button_showmessage=Show Message
+button_home=Inicio
+button_save=Salvar
+button_Atualizar=Atualizar
+button_find=Pesquisar
+button_cancel=Cancelar
+button_proceed=Próximo
+button_submit=Submeter
+button_reset=Limpar
+button_end=Fim
+button_showmessage=Mostrar Mensagem
 button_showstacktrace=Show Stack Trace
 button_showcookie=Show Cookie
 
 #field labels
-field_simple_validation=Enter {0} {1}
-field_invalid_email=Please enter a valid email
+field_simple_validation=Insira {0} {1}
+field_invalid_email=Insira um email válido
 field_invalid_number=Number with \\'-\\' or \\'.\\' allowed
-field_invalid_integer=Integer numbers only
-field_invalid=Please enter valid {0}
-field_required=required
+field_invalid_integer=Apenas números inteiros
+field_invalid=Insira um válido {0}
+field_required=Obrigatório
 
 #list labels
-list_first=First Page
-list_next=Next Page
-list_previous=Previous Page
-list_last=Last Page
-list_page=Page {0} of {1}
-list_size=List results per page:
+list_first=Primeira Página
+list_next=Próxima Página
+list_previous=Página Anterior
+list_last=Última Página
+list_page=Página {0} de {1}
+list_size=Resultados por página:
 
 #selenium
 selenium_menu_test_suite=Test Suite
