--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -19,7 +19,7 @@ welcome_text=Classifikdos é um serviço que facilitará o seu dia-a-dia na hora de
 entity_list_all=Listar Todos os {0}
 entity_show=Visualizar {0}
 entity_create=Criar Novo {0}
-entity_Atualizar=Atualizar {0}
+entity_update=Atualizar {0}
 entity_delete=Apagar {0}
 entity_delete_confirm=Você tem certeza que deseja remover?
 entity_find=Pesquisar {0}
